add GetBrands API endpoint to swagger
