# src/AppForSEII2526.Web/OpenAPIs/swagger1.json
@@ -14,6 +14,54 @@
     "version": "v1"
   },
   "paths": {
+    "/GetBrands": {
+      "get": {
+        "tags": [
+          "Brands"
+        ],
+        "operationId": "GetBrands",
+        "parameters": [
+          {
+            "name": "brandName",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/Classes/GetClassesForPlan": {
       "get": {
         "tags": [
